[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://bitcell_memesbruh03.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://reset.png" type="Texture" id=3]
[ext_resource path="res://font.tres" type="DynamicFont" id=4]
[ext_resource path="res://menu.png" type="Texture" id=5]
[ext_resource path="res://font_huge.tres" type="DynamicFont" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LabelLevel" type="Label" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.498039 )
margin_left = 10.0
margin_top = 5.0
margin_right = 94.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 4 )
text = "Level: 10"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LabelIQ" type="Label" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.498039 )
margin_left = 10.0
margin_top = 566.0
margin_right = 86.0
margin_bottom = 594.0
custom_fonts/font = ExtResource( 4 )
text = "IQ: 1000"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Reset" type="TextureButton" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.498039 )
margin_left = 554.0
margin_top = 10.0
margin_right = 566.0
margin_bottom = 22.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ShowMenu" type="TextureButton" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.498039 )
margin_left = 554.0
margin_top = 554.0
margin_right = 566.0
margin_bottom = 566.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Menu" type="Panel" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -140.0
margin_right = 120.0
margin_bottom = 140.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="CanvasLayer/Menu/VBoxContainer"]
margin_right = 200.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 6 )
text = "Play!"
__meta__ = {
"_edit_lock_": true
}

[node name="About" type="Button" parent="CanvasLayer/Menu/VBoxContainer"]
margin_top = 66.0
margin_right = 200.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 6 )
text = "About"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="CanvasLayer/Menu/VBoxContainer"]
margin_top = 132.0
margin_right = 200.0
margin_bottom = 194.0
custom_fonts/font = ExtResource( 6 )
text = "Exit"
__meta__ = {
"_edit_lock_": true
}

[node name="PanelAbout" type="Panel" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LabelAbout" type="RichTextLabel" parent="CanvasLayer/PanelAbout"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.5
margin_top = -141.5
margin_right = 142.5
margin_bottom = 141.5
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Made by [url=https://staddy.ru]staddy[/url]
stas.ponkrashov@gmail.com

with [url=https://godotengine.org]Godot Engine[/url]

font by memesbruh03"
text = "Made by staddy
stas.ponkrashov@gmail.com

with Godot Engine

font by memesbruh03"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="CanvasLayer/PanelAbout"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -82.0
margin_right = 75.0
margin_bottom = -20.0
custom_fonts/font = ExtResource( 6 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="CanvasLayer/ShowMenu" to="." method="_on_ShowMenu_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/VBoxContainer/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="meta_clicked" from="CanvasLayer/PanelAbout/LabelAbout" to="." method="_on_LabelAbout_meta_clicked"]
[connection signal="pressed" from="CanvasLayer/PanelAbout/Back" to="." method="_on_Back_pressed"]
